# crud-rest-api-rust-rocket-diesel-postgres

./: .env  .gitignore  Cargo.toml  docker-compose.yaml  readme.md
migrations/2021-08-04-135205_create_artists/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
